# artist-lifecycle

./: .dockerignore  Dockerfile  README.md  predict.py  pyproject.toml  train.py
common/: config_manager.py  io.py  logging.py
configs/: breakout.yaml  project.yaml  sources.yaml
core/modeling/train/: train_breakout.py
core/scripts/: build_breakout.py
core/service/: api.py
core/serving/: artifacts.py  schemas.py
data/features/: breakout_modeling.csv
data/metrics/breakout/: metrics.json
data/processed/: artist_month_snapshots.csv
notebooks/breakout/: 00_eda.ipynb  01_model_training.ipynb
service/: api.py
